--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -20,7 +20,7 @@
                               <p class="card-text"></p>
                              
                           
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <a href="#" class="btn btn-primary" id="btn1">Go somewhere</a>
                         </div>
                       </div>
                 </div>
@@ -78,8 +78,9 @@
                   <small id="emailHelp" class="form-text text-muted">Dodajte komentar</small>
                 </div>
                 
-                <input type="text" id="timepicker-one" name="timepicker-one" class="timepicker"/>
-                <input type="text" id="timepicker-two" name="timepicker-two" class="timepicker"/>
+                <input type="text" id="vreme1">
+                <input type=" text" id="vreme2">
+
                
                 
               </form>
