--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -78,13 +78,15 @@
                   <small id="emailHelp" class="form-text text-muted">Dodajte komentar</small>
                 </div>
                 
-                <input type="text" id="vreme1">
-                <input type=" text" id="vreme2">
+              
 
                
                 
               </form>
+              <input type="text" id="11">
+              <input type=" text" id="22">
               <button  class="btn btn-primary" id="postdugme">Submit</button>
+            
             </div>
             
 
