--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -77,6 +77,11 @@
                   <input  id="komentar"class="form-control"   placeholder="Komentar" name="komentar">
                   <small id="emailHelp" class="form-text text-muted">Dodajte komentar</small>
                 </div>
+                <div class="form-group">
+                <label >profesor</label>
+                <input  id="profesor"class="form-control"   placeholder="profesor" name="profesor">
+                <small id="emailHelp" class="form-text text-muted">Profesor</small>
+              </div>
                 
               
 
