--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -6,10 +6,13 @@
             <link rel="stylesheet" href="css/datecss.css">
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
             <script src="css/datejs.js"></script>
+            <script src="css/datejs-en.js"></script>
                 
         </head>
 <body>
+<div class="container">
   <input type='text' class="datepicker-here"  />
+  </div> 
   <div class="container">
     
     <button class="btn btn-primary" disabled= "true"id="left"><i class="fas fa-arrow-left"></i></button>
@@ -26,7 +29,8 @@
             
                         <div class="card-body" id="1">
                           <h5 class="card-title">UCINOICA 1</h5>
-                          
+
+                              
                               <p class="card-text"></p>
                              
                           
