--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -26,6 +26,7 @@
               <div class="row">
                 <div class="col-sm-3">
                     <div class="card" style="width: 18rem;">
+                      <button class="btn btn primary" id="btnbrisanje">Obrisi</button>
             
                         <div class="card-body" id="1">
                           <h5 class="card-title">UCINOICA 1</h5>
@@ -108,7 +109,9 @@
               <button  class="btn btn-primary" id="postdugme">Submit</button>-->
             
             </div>
-            
+            <div class="brisanje">
+                <div class="opcija"></div>
+            </div>
             
 
            
