--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -15,7 +15,7 @@
   </div> 
   <div class="container">
     
-    <button class="btn btn-primary" id="left"><i class="fas fa-arrow-left"></i></button>
+    <button class="btn btn-primary" disabled= "true"id="left"><i class="fas fa-arrow-left"></i></button>
     <button class="btn btn-primary" id="lupa"><i class="fas fa-search"></i></button>
     <button class="btn btn-primary" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
     
