--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -15,7 +15,7 @@
   </div> 
   <div class="container">
     
-    <button class="btn btn-primary" id="left"><i class="fas fa-arrow-left"></i></button>
+    <button class="btn btn-primary" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
     <button class="btn btn-primary" id="lupa"><i class="fas fa-search"></i></button>
     <button class="btn btn-primary" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
     
@@ -28,8 +28,8 @@
                     <div class="card" style="width: 18rem;">
                     
             
-                        <div class="card-body" id="1">
-                          <h5 class="card-title">UCINOICA 1</h5>
+                        <div class="card-body text-center" id="1">
+                          <h5 class="card-title">UCIONICA 1</h5>
 
                               
                               <p class="card-text"></p>
@@ -42,8 +42,8 @@
                 <div class="col-sm-3">
                     <div class="card" style="width: 18rem;">
             
-                        <div class="card-body" id="2">
-                          <h5 class="card-title">UCINOICA 2</h5>
+                        <div class="card-body text-center" id="2">
+                          <h5 class="card-title">UCIONICA 2</h5>
                           
                               <p class="card-text"></p>
                              
@@ -55,8 +55,8 @@
                 <div class="col-sm-3">
                     <div class="card" style="width: 18rem;">
             
-                        <div class="card-body" id="3">
-                          <h5 class="card-title">UCINOICA 3</h5>
+                        <div class="card-body text-center" id="3">
+                          <h5 class="card-title">UCIONICA 3</h5>
                           
                               <p class="card-text"></p>
                              
@@ -68,8 +68,8 @@
                 <div class="col-sm-3">
                     <div class="card" style="width: 18rem;">
             
-                        <div class="card-body" id="4">
-                          <h5 class="card-title">UCINOICA 4</h5>
+                        <div class="card-body text-center" id="4">
+                          <h5 class="card-title">UCIONICA 4</h5>
                           
                               <p class="card-text"></p>
                              
