--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -7,6 +7,7 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
             <script src="css/datejs.js"></script>
             <script src="css/datejs-en.js"></script>
+            
                 
         </head>
 <body>
@@ -15,11 +16,10 @@
   </div> 
   <div class="container">
     
-<<<<<<< HEAD
+
     <button class="btn btn-primary" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
-=======
-    <button class="btn btn-primary" disabled= "true"id="left"><i class="fas fa-arrow-left"></i></button>
->>>>>>> 7616f27973ae87e72cd77c188aea7dceb6d0c050
+
+    
     <button class="btn btn-primary" id="lupa"><i class="fas fa-search"></i></button>
     <button class="btn btn-primary" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
     
@@ -118,7 +118,20 @@
             </div>
             
 
-           
+            <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase.js"></script>
+            <script>
+              // Initialize Firebase
+              var config = {
+                apiKey: "AIzaSyBME0LD3_ru8ulbFq2EJ7w-uGdgPusXV1A",
+                authDomain: "velja-431f4.firebaseapp.com",
+                databaseURL: "https://velja-431f4.firebaseio.com",
+                projectId: "velja-431f4",
+                storageBucket: "velja-431f4.appspot.com",
+                messagingSenderId: "389253426279"
+              };
+              firebase.initializeApp(config);
+            </script>
+             
 
                   
                  
