--- a/public/css/stylefire.css
+++ b/public/css/stylefire.css
@@ -24,10 +24,10 @@ input, button {
   border: 1px solid #ccc;
   border-radius: 5px;
   background: #fff;
-  padding: 15px;
+  padding: 15%;
   outline: none;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 20%;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
@@ -42,7 +42,7 @@ input, button {
   color: #fff;
   border: 1px solid #5d8ffc;
   border-radius: 5px;
-  padding: 15px;
+  padding: 15%px;
   display: block;
   width: 100%;
   transition: 0.3s;
