--- a/public/style.css
+++ b/public/style.css
@@ -56,3 +56,12 @@ input, button {
   border: 1px solid #5d8ffc;
   cursor: pointer;
 }
+@media screen and (max-width:570px){
+ .main-div{
+   width: 80%;
+  margin-top:10%;
+ 
+  padding: 0;
+}
+ 
+}
