--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Firebase Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
