popravljen bug za prelaz

--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -17,11 +17,11 @@
   <div class="container">
     
 
-    <button class="btn btn-primary" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
+    <button class="btn btn-primary button1" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
 
     
-    <button class="btn btn-primary" id="lupa"><i class="fas fa-search"></i></button>
-    <button class="btn btn-primary" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
+    <button class="btn btn-primary button1" id="lupa"><i class="fas fa-search"></i></button>
+    <button class="btn btn-primary button1" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
     
 </div>
     <div class=" datum" ></div>
