--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,12 @@ body {
   margin: 0; 
   padding: 0; 
 
- 
+  background: linear-gradient(90deg,#70e1f5
+  ,  #ffd194);
+	background-size: 200% 200%;
+	-webkit-animation: Gradient 10s ease infinite;
+	-moz-animation: Gradient 10s ease infinite;
+	animation: Gradient 10s ease infinite;
   
   font-size: 11px; 
 }
@@ -68,7 +73,7 @@ textarea { height: 80px; resize: none; }
   height: 30px;
 }
 .card{
-    
+  background-color: transparent;
     margin:auto;
 
     border: none;
@@ -98,6 +103,7 @@ textarea { height: 80px; resize: none; }
   padding: 2%;
   
 }
+
 #right {
   margin-top: 10px; 
   margin-left: 10%!important;
@@ -124,19 +130,30 @@ textarea { height: 80px; resize: none; }
  float: left;
 }
 .btn ,btn-primary{
-  background-color: #17a2b8!important;
-  border: #34495e;
+  background-color: transparent!important;
+
+  border: black solid 1px;
+  color:black;
 }
 .btn.btn-primary:disabled{
-  background-color: #17a2b8;
+
+  border:white 1px solid;
 }
 .btn.btn-primary:active{
-  background-color: #17a2b8;
+  
+  border:black 1px solid;
 }
 .btn-primary:hover {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+  color: white;;
+  
+  border:white 1px solid;
+ 
+}
+.btn-primary:focus {
+  color: black;
+  
+  border:white 1px solid;
+ 
 }
 .datum{
   margin: auto;
@@ -151,7 +168,7 @@ input {
 }
 .kanta{
   transition: 0.2s linear   ;
-  background-color: white;
+  background-color: transparent;
   border:none;
 }
 .kanta:hover{
@@ -309,4 +326,31 @@ input {
       
       
     }
-  
+    @keyframes Gradient {
+      0% {
+        background-position: 0% 50%
+      }
+      50% {
+        background-position: 100% 50%
+      }
+      100% {
+        background-position: 0% 50%
+      }
+    }
+    
+    
+    .button1{
+       display:inline-block;
+       padding:0.35em 1.2em;
+       border:0.1em solid #FFFFFF;
+       margin:0 0.3em 0.3em 0;
+       border-radius:0.12em;
+       box-sizing: border-box;
+       text-decoration:none;
+       font-family:'Roboto',sans-serif;
+       font-weight:300;
+       color:#FFFFFF;
+       text-align:center;
+       transition: all 0.2s;
+      }
+      
