prva stavka odradjena
prva stavka odradjenja

--- a/views/kalendar.ejs
+++ b/views/kalendar.ejs
@@ -51,23 +51,7 @@
 				<ul class="ponedeljak">
 					
 
-					<li class="single-event" data-start="11:00" data-end="12:30"  data-event="event-2" >
-						<a href="#0">
-							<em class="event-name">KURAC Workout</em>
-						</a>
-					</li>
-
 					
-					<li class="single-event" data-start="16:00" data-end="17:30"   data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
-					<li class="single-event" data-start="09:00" data-end="10:30" data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
 				</ul>
 			</li>
 			
@@ -75,121 +59,41 @@
 			<li class="events-group">
 				<div class="top-info"><span>Tuesday</span></div>
 
-				<ul>
-					<li class="single-event" data-start="10:00" data-end="11:00"   data-event="event-2">
-						<a href="#0">
-							<em class="event-name">Rowing Workout</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="11:30" data-end="13:00"  data-event="event-4">
-						<a href="#0">
-							<em class="event-name">Restorative Yoga</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="13:30" data-end="15:00"  data-event="event-1">
-						<a href="#0">
-							<em class="event-name">Abs Circuit</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="15:45" data-end="16:45"   data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
+				<ul class="utorak">
+				
 				</ul>
 			</li>
 
 			<li class="events-group">
 				<div class="top-info"><span>Wednesday</span></div>
 
-				<ul>
-					<li class="single-event" data-start="09:00" data-end="10:15"  data-event="event-4">
-						<a href="#0">
-							<em class="event-name">Restorative Yoga</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="10:45" data-end="11:45"  data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="12:00" data-end="13:45"   data-event="event-2">
-						<a href="#0">
-							<em class="event-name">Rowing Workout</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="13:45" data-end="15:00"  data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
+				<ul class="sreda">
+					
 				</ul>
 			</li>
 
 			<li class="events-group">
 				<div class="top-info"><span>Thursday</span></div>
 
-				<ul>
-					<li class="single-event" data-start="09:30" data-end="10:30"  data-event="event-1">
-						<a href="#0">
-							<em class="event-name">Abs Circuit</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="12:00" data-end="13:45"  data-event="event-4">
-						<a href="#0">
-							<em class="event-name">Restorative Yoga</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="15:30" data-end="16:30"  data-event="event-1">
-						<a href="#0">
-							<em class="event-name">Abs Circuit</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="17:00" data-end="18:30"   data-event="event-2">
-						<a href="#0">
-							<em class="event-name">Rowing Workout</em>
-						</a>
-					</li>
-					<li class="single-event" data-start="18:30" data-end="19:30"   data-event="event-2">
-						<a href="#0">
-							<em class="event-name">Rowing Workout</em>
-						</a>
-					</li>
+				<ul class="cetvrtak">
+					
 				</ul>
 			</li>
 
 			<li class="events-group">
 				<div class="top-info"><span>Friday</span></div>
 
-				<ul>
-					<li class="single-event" data-start="10:00" data-end="11:00"  data-event="event-2">
-						<a href="#0">
-							<em class="event-name">Rowing Workout</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="12:30" data-end="14:00" data-event="event-1">
-						<a href="#0">
-							<em class="event-name">Abs Circuit</em>
-						</a>
-					</li>
-
-					<li class="single-event" data-start="15:45" data-end="16:45"   data-event="event-3">
-						<a href="#0">
-							<em class="event-name">Yoga Level 1</em>
-						</a>
-					</li>
+				<ul class="petak">
+					
 				</ul>
 			</li>
+			<li class="events-group">
+				<div class="top-info"><span>Subota</span></div>
+	
+				<ul class="subota">
+				   <!-- events here -->
+				</ul>
+			 </li>
 		</ul>
 	</div>
 	
