kalendar za ucinonicu 1 radi
kalendar za ucinonicu 1 radi

--- a/views/kalendar.ejs
+++ b/views/kalendar.ejs
@@ -7,10 +7,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
 	<link rel="stylesheet" href="/kalendar/css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="/kalendar/css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+           
+               
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            
   	
 	<title>Schedule Template | CodyHouse</title>
 </head>
 <body>
+		<button class="btn btn-primary button1" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
+
+    
+		<button class="btn btn-primary button1" id="lupa"><i class="fas fa-search"></i></button>
+		<button class="btn btn-primary button1" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
 <div class="cd-schedule loading">
 	<div class="timeline">
 		<ul>
