--- a/views/kalendar.ejs
+++ b/views/kalendar.ejs
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
 	<link rel="stylesheet" href="/kalendar/css/reset.css"> <!-- CSS reset -->
@@ -10,16 +11,14 @@
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="../css/datejs.js"></script>
-	 <script src="../css/datejs-en.js"></script>   
-	 <script src="../css/forma.js"></script>
+	
             
 	 <link rel="stylesheet" href="../css/datecss.css">  
-	 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
                
              
   	
-	<title>Schedule Template | CodyHouse</title>
+	<title>Kalendar</title>
 </head>
 <body>
 		<div id="contactForm">
@@ -33,8 +32,64 @@
 					</select>
 				
 				  <input placeholder="Profesor" type="text" id="profesor" required />
-				  <input placeholder="Pocetak"  type="text"id="11" required />
-				  <input placeholder="Kraj" type="text"id="22" required />
+				  <select name="Pocetak" id="11">
+						<option>08:30</option>
+						<option>09:00</option>
+						<option>09:30</option>
+						<option>10:00</option>
+						<option>10:30</option>
+						<option>11:00</option>
+						<option>11:30</option>
+						<option>12:00</option>
+						<option>12:30</option>
+						<option>13:00</option>
+						<option>13:30</option>
+						<option>14:00</option>
+						<option>14:30</option>
+						<option>15:00</option>
+						<option>15:30</option>
+						<option>16:00</option>
+						<option>16:30</option>
+						<option>17:00</option>
+						<option>17:30</option>
+						<option>18:00</option>
+						<option>18:30</option>
+						<option>19:00</option>
+						<option>19:30</option>
+						<option>20:00</option>
+						<option>20:30</option>
+			
+				  </select>
+				  <select name="Pocetak" id="22">
+						<option>08:30</option>
+						<option>09:00</option>
+						<option>09:30</option>
+						<option>10:00</option>
+						<option>10:30</option>
+						<option>11:00</option>
+						<option>11:30</option>
+						<option>12:00</option>
+						<option>12:30</option>
+						<option>13:00</option>
+						<option>13:30</option>
+						<option>14:00</option>
+						<option>14:30</option>
+						<option>15:00</option>
+						<option>15:30</option>
+						<option>16:00</option>
+						<option>16:30</option>
+						<option>17:00</option>
+						<option>17:30</option>
+						<option>18:00</option>
+						<option>18:30</option>
+						<option>19:00</option>
+						<option>19:30</option>
+						<option>20:00</option>
+						<option>20:30</option>
+			
+				  </select>
+				  <!--<input placeholder="Pocetak"  type="text"id="11" required />-->
+				  <!--<input placeholder="Kraj" type="text"id="22" required />-->
 				  <textarea placeholder="Komentar" id="komentar"></textarea>
 				  <button id="postdugme" class="btn btn-primary">Zakazi</button>
 				
@@ -42,12 +97,24 @@
 				</form>
 			  </div>
 		<div class="container">
-				<input type='text' class="datepicker-here"  />
+			<select name="" id="ucionice">
+				<option id="opt1" value="1">Ucionica 1</option>
+				<option value="2">Ucionica 2</option>
+				<option value="3">Ucionica 3</option>
+				<option value="4">Ucionica 4</option>
+			</select>
+			<small id="maliU"></small>
+			
+
+				
+			<input type="button" id="filtr" class=" btn-primary" value="Filtriraj">
+	
+			
 				</div> 
 		<button class="btn btn-primary button1" id="left" disabled= "true"> <i class="fas fa-arrow-left"></i></button>
 
     
-		<button class="btn btn-primary button1 contact" id="lupa"><i class="fas fa-search"></i></button>
+		<button class="btn btn-primary button1 contact" id="lupa">Zakazi </button>
 		<button class="btn btn-primary button1" id="right" disabled= "true"><i class="fas fa-arrow-right"></i></button>
 <div class="cd-schedule loading">
 	<div class="timeline">
