--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -8,7 +8,7 @@
             <script src="css/datejs.js"></script>
             <script src="css/datejs-en.js"></script>
             
-                
+                <title>Zkazivanje</title>
         </head>
 <body>
 <div class="container">
@@ -95,8 +95,64 @@
                 <form action="#">
                   
                   <input placeholder="Profesor" type="text" id="profesor" required />
-                  <input placeholder="Pocetak"  type="text"id="11" required />
-                  <input placeholder="Kraj" type="text"id="22" required />
+                  <select name="Pocetak" id="11">
+                      <option>08:30</option>
+                      <option>09:00</option>
+                      <option>09:30</option>
+                      <option>10:00</option>
+                      <option>10:30</option>
+                      <option>11:00</option>
+                      <option>11:30</option>
+                      <option>12:00</option>
+                      <option>12:30</option>
+                      <option>13:00</option>
+                      <option>13:30</option>
+                      <option>14:00</option>
+                      <option>14:30</option>
+                      <option>15:00</option>
+                      <option>15:30</option>
+                      <option>16:00</option>
+                      <option>16:30</option>
+                      <option>17:00</option>
+                      <option>17:30</option>
+                      <option>18:00</option>
+                      <option>18:30</option>
+                      <option>19:00</option>
+                      <option>19:30</option>
+                      <option>20:00</option>
+                      <option>20:30</option>
+                
+                    </select>
+                    <select name="Pocetak" id="22">
+                      <option>08:30</option>
+                      <option>09:00</option>
+                      <option>09:30</option>
+                      <option>10:00</option>
+                      <option>10:30</option>
+                      <option>11:00</option>
+                      <option>11:30</option>
+                      <option>12:00</option>
+                      <option>12:30</option>
+                      <option>13:00</option>
+                      <option>13:30</option>
+                      <option>14:00</option>
+                      <option>14:30</option>
+                      <option>15:00</option>
+                      <option>15:30</option>
+                      <option>16:00</option>
+                      <option>16:30</option>
+                      <option>17:00</option>
+                      
+                      <option>17:30</option>
+                      <option>18:00</option>
+                      <option>18:30</option>
+                      <option>19:00</option>
+                      <option>19:30</option>
+                      <option>20:00</option>
+                      <option>20:30</option>
+                
+                    </select>
+
                   <textarea placeholder="Komentar" id="komentar"></textarea>
                   <button id="postdugme" class="btn btn-primary">Zakazi</button>
                   
@@ -108,6 +164,9 @@
                
                 
               </form>
+              <div class="container">
+              <button class=" btn-primary kale"><a id="linkic" href="https://ucionice.herokuapp.com/kalendar/">Kalendar</a></button>
+            </div>
              <!-- <input type="text" id="11">
               <input type=" text" id="22">
               <button  class="btn btn-primary" id="postdugme">Submit</button>-->
