--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ h1{ margin: 0; }
 
 #contactForm { 
   display: none;
-
+z-index: 1000;
   border: 3px solid #17a2b8; 
   padding: 2em;
   width: 400px;
