dodao sam jos sati

--- a/views/kalendar.ejs
+++ b/views/kalendar.ejs
@@ -58,6 +58,9 @@
 						<option>19:30</option>
 						<option>20:00</option>
 						<option>20:30</option>
+						<option>21:00</option>
+						<option>21:30</option>
+						<option>22:00</option>
 			
 				  </select>
 				  <select name="Pocetak" id="22">
@@ -86,6 +89,9 @@
 						<option>19:30</option>
 						<option>20:00</option>
 						<option>20:30</option>
+						<option>21:00</option>
+						<option>21:30</option>
+						<option>22:00</option>
 			
 				  </select>
 				  <!--<input placeholder="Pocetak"  type="text"id="11" required />-->
@@ -145,6 +151,10 @@
 			<li><span>19:30</span></li>
 			<li><span>20:00</span></li>
 			<li><span>20:30</span></li>
+			<li><span>21:00</span></li>
+			<li><span>21:30</span></li>
+			<li><span>22:00</span></li>
+			
 		</ul>
 	</div> <!-- .timeline -->
 
