--- a/views/zak.ejs
+++ b/views/zak.ejs
@@ -121,6 +121,9 @@
                       <option>19:30</option>
                       <option>20:00</option>
                       <option>20:30</option>
+						<option>21:00</option>
+						<option>21:30</option>
+						<option>22:00</option>
                 
                     </select>
                     <select name="Pocetak" id="22">
@@ -150,6 +153,9 @@
                       <option>19:30</option>
                       <option>20:00</option>
                       <option>20:30</option>
+						<option>21:00</option>
+						<option>21:30</option>
+						<option>22:00</option>
                 
                     </select>
 
